Code duplication in various places removed