@@ -38,6 +38,7 @@ package org.semanticweb.owlapi.rio;
 import static java.util.Arrays.asList;
 import static org.semanticweb.owlapi.utilities.OWLAPIPreconditions.verifyNotNull;
 
+import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.Collection;
@@ -53,7 +54,8 @@ import org.semanticweb.owlapi.model.OWLDocumentFormatFactory;
 import org.semanticweb.owlapi.model.OWLRuntimeException;
 
 /**
- * Extended {@link RDFFormat} constants for OWL formats that can be translated into RDF.
+ * Extended {@link RDFFormat} constants for OWL formats that can be translated
+ * into RDF.
  *
  * @author Peter Ansell p_ansell@yahoo.com
  * @since 4.0.0
@@ -61,160 +63,199 @@ import org.semanticweb.owlapi.model.OWLRuntimeException;
 public class OWLAPIRDFFormat extends RDFFormat {
 
     /**
-     * The <a href="http://www.w3.org/TR/owl2-manchester-syntax/">Manchester OWL Syntax</a> file
-     * format.
+     * The <a href="http://www.w3.org/TR/owl2-manchester-syntax/">Manchester OWL
+     * Syntax</a> file format.
      * <p>
-     * The file extension {@code .omn} is recommended for Manchester OWL Syntax documents. The media
-     * type is {@code text/owl-manchester} and encoding is in UTF-8.
+     * The file extension {@code .omn} is recommended for Manchester OWL Syntax
+     * documents. The media type is {@code text/owl-manchester} and encoding is
+     * in UTF-8.
      * </p>
      *
-     * @see <a href="http://www.w3.org/TR/owl2-manchester-syntax/">OWL 2 Web Ontology Language
-     * Manchester Syntax (Second Edition)</a>
+     * @see <a href="http://www.w3.org/TR/owl2-manchester-syntax/">OWL 2 Web
+     *      Ontology Language Manchester Syntax (Second Edition)</a>
      */
-    public static final OWLAPIRDFFormat MANCHESTER_OWL =
-        new OWLAPIRDFFormat("Manchester OWL Syntax", asList("text/owl-manchester"),
-            StandardCharsets.UTF_8, asList("omn"), SUPPORTS_NAMESPACES,
-            NO_CONTEXTS, new ManchesterSyntaxDocumentFormat());
+    public static final OWLAPIRDFFormat MANCHESTER_OWL = new OWLAPIRDFFormat("Manchester OWL Syntax",
+        asList("text/owl-manchester"), StandardCharsets.UTF_8, asList("omn"), SUPPORTS_NAMESPACES, NO_CONTEXTS,
+        new ManchesterSyntaxDocumentFormat());
     /**
-     * The <a href="http://www.w3.org/TR/owl2-xml-serialization/">OWL/XML</a> file format.
+     * The <a href="http://www.w3.org/TR/owl2-xml-serialization/">OWL/XML</a>
+     * file format.
      * <p>
-     * The file extension {@code .owx} is recommended for OWL/XML documents. The media type is
-     * {@code application/owl+xml} and encoding is in UTF-8.
+     * The file extension {@code .owx} is recommended for OWL/XML documents. The
+     * media type is {@code application/owl+xml} and encoding is in UTF-8.
      * </p>
      *
-     * @see <a href="http://www.w3.org/TR/owl2-xml-serialization/">OWL 2 Web Ontology Language XML
-     * Serialization (Second Edition)</a>
+     * @see <a href="http://www.w3.org/TR/owl2-xml-serialization/">OWL 2 Web
+     *      Ontology Language XML Serialization (Second Edition)</a>
      */
-    public static final OWLAPIRDFFormat OWL_XML = new OWLAPIRDFFormat("OWL/XML Syntax",
-        asList("application/owl+xml"), StandardCharsets.UTF_8, asList("owx"),
-        SUPPORTS_NAMESPACES, NO_CONTEXTS, new OWLXMLDocumentFormat());
+    public static final OWLAPIRDFFormat OWL_XML = new OWLAPIRDFFormat("OWL/XML Syntax", asList("application/owl+xml"),
+        StandardCharsets.UTF_8, asList("owx"), SUPPORTS_NAMESPACES, NO_CONTEXTS, new OWLXMLDocumentFormat());
     /**
-     * The <a href="http://www.w3.org/TR/owl2-syntax/">OWL Functional Syntax</a> file format.
+     * The <a href="http://www.w3.org/TR/owl2-syntax/">OWL Functional Syntax</a>
+     * file format.
      * <p>
-     * The file extension {@code .ofn} is recommended for OWL Functional Syntax documents. The media
-     * type is {@code text/owl-functional} and encoding is in UTF-8.
+     * The file extension {@code .ofn} is recommended for OWL Functional Syntax
+     * documents. The media type is {@code text/owl-functional} and encoding is
+     * in UTF-8.
      * </p>
      *
-     * @see <a href="http://www.w3.org/TR/owl2-syntax/">OWL 2 Web Ontology Language Structural
-     * Specification and Functional-Style Syntax (Second Edition)</a>
+     * @see <a href="http://www.w3.org/TR/owl2-syntax/">OWL 2 Web Ontology
+     *      Language Structural Specification and Functional-Style Syntax
+     *      (Second Edition)</a>
      */
-    public static final OWLAPIRDFFormat OWL_FUNCTIONAL =
-        new OWLAPIRDFFormat("OWL Functional Syntax", asList("text/owl-functional"),
-            StandardCharsets.UTF_8, asList("ofn"), SUPPORTS_NAMESPACES,
-            NO_CONTEXTS, new FunctionalSyntaxDocumentFormat());
-    @Nullable
-    private OWLDocumentFormat owlFormat;
-    @Nullable
-    private OWLDocumentFormatFactory owlFormatFactory;
+    public static final OWLAPIRDFFormat OWL_FUNCTIONAL = new OWLAPIRDFFormat("OWL Functional Syntax",
+        asList("text/owl-functional"), StandardCharsets.UTF_8, asList("ofn"), SUPPORTS_NAMESPACES, NO_CONTEXTS,
+        new FunctionalSyntaxDocumentFormat());
+    @Nullable private OWLDocumentFormat owlFormat;
+    @Nullable private OWLDocumentFormatFactory owlFormatFactory;
 
     /**
-     * @param name name
-     * @param mimeType mimeType
-     * @param charset charset
-     * @param fileExtension fileExtension
-     * @param supportsNamespaces supportsNamespaces
-     * @param supportsContexts supportsContexts
-     * @param owlFormat owlFormat
+     * @param name
+     *        name
+     * @param mimeType
+     *        mimeType
+     * @param charset
+     *        charset
+     * @param fileExtension
+     *        fileExtension
+     * @param supportsNamespaces
+     *        supportsNamespaces
+     * @param supportsContexts
+     *        supportsContexts
+     * @param owlFormat
+     *        owlFormat
      */
     public OWLAPIRDFFormat(String name, String mimeType, Charset charset, String fileExtension,
-        boolean supportsNamespaces, boolean supportsContexts,
+        boolean supportsNamespaces, boolean supportsContexts, OWLDocumentFormatFactory owlFormat) {
+        super(name, mimeType, charset, fileExtension, supportsNamespaces, supportsContexts);
+        owlFormatFactory = owlFormat;
+    }
+
+    /**
+     * @param name
+     *        name
+     * @param mimeType
+     *        mimeType
+     * @param charset
+     *        charset
+     * @param fileExtensions
+     *        fileExtensions
+     * @param supportsNamespaces
+     *        supportsNamespaces
+     * @param supportsContexts
+     *        supportsContexts
+     * @param owlFormat
+     *        owlFormat
+     */
+    public OWLAPIRDFFormat(String name, String mimeType, Charset charset, Collection<String> fileExtensions,
+        boolean supportsNamespaces, boolean supportsContexts, OWLDocumentFormatFactory owlFormat) {
+        super(name, mimeType, charset, fileExtensions, supportsNamespaces, supportsContexts);
+        owlFormatFactory = owlFormat;
+    }
+
+    /**
+     * @param name
+     *        name
+     * @param mimeTypes
+     *        mimeTypes
+     * @param charset
+     *        charset
+     * @param fileExtensions
+     *        fileExtensions
+     * @param supportsNamespaces
+     *        supportsNamespaces
+     * @param supportsContexts
+     *        supportsContexts
+     * @param owlFormat
+     *        owlFormat
+     */
+    public OWLAPIRDFFormat(String name, Collection<String> mimeTypes, Charset charset,
+        Collection<String> fileExtensions, boolean supportsNamespaces, boolean supportsContexts,
         OWLDocumentFormatFactory owlFormat) {
-        super(name, mimeType, charset, fileExtension, supportsNamespaces, supportsContexts);
-        owlFormatFactory = owlFormat;
-    }
-
-    /**
-     * @param name name
-     * @param mimeType mimeType
-     * @param charset charset
-     * @param fileExtensions fileExtensions
-     * @param supportsNamespaces supportsNamespaces
-     * @param supportsContexts supportsContexts
-     * @param owlFormat owlFormat
-     */
-    public OWLAPIRDFFormat(String name, String mimeType, Charset charset,
-        Collection<String> fileExtensions, boolean supportsNamespaces,
-        boolean supportsContexts, OWLDocumentFormatFactory owlFormat) {
-        super(name, mimeType, charset, fileExtensions, supportsNamespaces, supportsContexts);
-        owlFormatFactory = owlFormat;
-    }
-
-    /**
-     * @param name name
-     * @param mimeTypes mimeTypes
-     * @param charset charset
-     * @param fileExtensions fileExtensions
-     * @param supportsNamespaces supportsNamespaces
-     * @param supportsContexts supportsContexts
-     * @param owlFormat owlFormat
-     */
-    public OWLAPIRDFFormat(String name, Collection<String> mimeTypes, Charset charset,
-        Collection<String> fileExtensions, boolean supportsNamespaces,
-        boolean supportsContexts, OWLDocumentFormatFactory owlFormat) {
         super(name, mimeTypes, charset, fileExtensions, supportsNamespaces, supportsContexts);
         owlFormatFactory = owlFormat;
     }
 
     /**
-     * @param name name
-     * @param mimeType mimeType
-     * @param charset charset
-     * @param fileExtension fileExtension
-     * @param supportsNamespaces supportsNamespaces
-     * @param supportsContexts supportsContexts
-     * @param owlFormat owlFormat
+     * @param name
+     *        name
+     * @param mimeType
+     *        mimeType
+     * @param charset
+     *        charset
+     * @param fileExtension
+     *        fileExtension
+     * @param supportsNamespaces
+     *        supportsNamespaces
+     * @param supportsContexts
+     *        supportsContexts
+     * @param owlFormat
+     *        owlFormat
      */
     public OWLAPIRDFFormat(String name, String mimeType, Charset charset, String fileExtension,
-        boolean supportsNamespaces, boolean supportsContexts,
-        OWLDocumentFormat owlFormat) {
+        boolean supportsNamespaces, boolean supportsContexts, OWLDocumentFormat owlFormat) {
         super(name, mimeType, charset, fileExtension, supportsNamespaces, supportsContexts);
         this.owlFormat = owlFormat;
     }
 
     /**
-     * @param name name
-     * @param mimeType mimeType
-     * @param charset charset
-     * @param fileExtensions fileExtensions
-     * @param supportsNamespaces supportsNamespaces
-     * @param supportsContexts supportsContexts
-     * @param owlFormat owlFormat
+     * @param name
+     *        name
+     * @param mimeType
+     *        mimeType
+     * @param charset
+     *        charset
+     * @param fileExtensions
+     *        fileExtensions
+     * @param supportsNamespaces
+     *        supportsNamespaces
+     * @param supportsContexts
+     *        supportsContexts
+     * @param owlFormat
+     *        owlFormat
      */
-    public OWLAPIRDFFormat(String name, String mimeType, Charset charset,
-        Collection<String> fileExtensions, boolean supportsNamespaces,
-        boolean supportsContexts, OWLDocumentFormat owlFormat) {
+    public OWLAPIRDFFormat(String name, String mimeType, Charset charset, Collection<String> fileExtensions,
+        boolean supportsNamespaces, boolean supportsContexts, OWLDocumentFormat owlFormat) {
         super(name, mimeType, charset, fileExtensions, supportsNamespaces, supportsContexts);
         this.owlFormat = owlFormat;
     }
 
     /**
-     * @param name name
-     * @param mimeTypes mimeTypes
-     * @param charset charset
-     * @param fileExtensions fileExtensions
-     * @param supportsNamespaces supportsNamespaces
-     * @param supportsContexts supportsContexts
-     * @param owlFormat owlFormat
+     * @param name
+     *        name
+     * @param mimeTypes
+     *        mimeTypes
+     * @param charset
+     *        charset
+     * @param fileExtensions
+     *        fileExtensions
+     * @param supportsNamespaces
+     *        supportsNamespaces
+     * @param supportsContexts
+     *        supportsContexts
+     * @param owlFormat
+     *        owlFormat
      */
     public OWLAPIRDFFormat(String name, Collection<String> mimeTypes, Charset charset,
-        Collection<String> fileExtensions, boolean supportsNamespaces,
-        boolean supportsContexts, OWLDocumentFormat owlFormat) {
+        Collection<String> fileExtensions, boolean supportsNamespaces, boolean supportsContexts,
+        OWLDocumentFormat owlFormat) {
         super(name, mimeTypes, charset, fileExtensions, supportsNamespaces, supportsContexts);
         this.owlFormat = owlFormat;
     }
 
     /**
-     * @return A fresh instance of the matching {@link OWLDocumentFormat} for this OWLAPIRDFFormat.
+     * @return A fresh instance of the matching {@link OWLDocumentFormat} for
+     *         this OWLAPIRDFFormat.
      */
     public OWLDocumentFormat getOWLFormat() {
         if (owlFormatFactory != null) {
             return owlFormatFactory.createFormat();
         }
         try {
-            return verifyNotNull(owlFormat).getClass().newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
-            throw new OWLRuntimeException(
-                "Format did not have a factory or a public default constructor", e);
+            return verifyNotNull(owlFormat).getClass().getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException
+            | NoSuchMethodException | SecurityException e) {
+            throw new OWLRuntimeException("Format did not have a factory or a public default constructor", e);
         }
     }
 }
